--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
    "main": "dist/index.js",
    "scripts": {
       "build": "tsc",
-      "start": "ts-node src/index.ts",
-      "dev": "nodemon --exec ts-node src/index.ts"
+      "start": "ts-node -r tsconfig-paths/register src/index.ts",
+      "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@types/morgan": "^1.9.2",
       "express": "^4.17.1",
+      "morgan": "^1.10.0",
+      "mysql": "^2.14.1",
+      "passport": "^0.4.1",
+      "passport-naver": "^1.0.6",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.34",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.34"
    },
    "devDependencies": {
       "@types/express": "^4.17.12",
       "@types/node": "^8.0.29",
+      "@types/passport": "^1.0.6",
+      "@types/passport-naver": "^0.2.0",
       "@typescript-eslint/eslint-plugin": "^4.26.1",
       "@typescript-eslint/parser": "^4.26.1",
       "eslint": "^7.28.0",
@@ -31,6 +37,7 @@
       "nodemon": "^2.0.7",
       "prettier": "^2.3.1",
       "ts-node": "3.3.0",
+      "tsconfig-paths": "^3.9.0",
       "typescript": "3.3.3333"
    }
 }
