--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,12 @@
          "es5",
          "es6"
       ],
+      "baseUrl": "./src",
+      "paths": {
+        "@/*": [
+          "./*"
+        ]
+      },
       "target": "es5",
       "module": "commonjs",
       "moduleResolution": "node",
