--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,7 +8,8 @@
    "synchronize": true,
    "logging": false,
    "entities": [
-      "src/entity/**/*.ts"
+      "src/entity/**/*.ts",
+      "src/user/entitiy.ts"
    ],
    "migrations": [
       "src/migration/**/*.ts"
