--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
    "license": "ISC",
    "dependencies": {
       "@types/morgan": "^1.9.2",
+      "axios": "^0.21.1",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
       "passport": "^0.4.1",
@@ -23,7 +26,9 @@
       "typeorm": "0.2.34"
    },
    "devDependencies": {
+      "@types/cors": "^2.8.10",
       "@types/express": "^4.17.12",
+      "@types/jsonwebtoken": "^8.5.2",
       "@types/node": "^8.0.29",
       "@types/passport": "^1.0.6",
       "@types/passport-naver": "^0.2.0",
