--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "axios": "^0.21.1",
       "cors": "^2.8.5",
       "express": "^4.17.1",
+      "express-jwt": "^6.0.0",
       "jsonwebtoken": "^8.5.1",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
@@ -28,6 +29,7 @@
    "devDependencies": {
       "@types/cors": "^2.8.10",
       "@types/express": "^4.17.12",
+      "@types/express-jwt": "^6.0.1",
       "@types/jsonwebtoken": "^8.5.2",
       "@types/node": "^8.0.29",
       "@types/passport": "^1.0.6",
